# MINGW-packages

mingw-w64-lua-luarocks/: 0001-luarocks_msys2_mingw_w64.patch  PKGBUILD
mingw-w64-luafilesystem/: 001-add-cmake-script-for-MSYS2-MINGW-packages.patch  CMakeLists.txt  MSYS2-GetLuaInfoFromPkgConfig-v1.0.0.cmake  PKGBUILD
mingw-w64-wxLua/: 001-fix-PARSE_WXWIDGETS_LIB_NAMES.patch  002-fix-wxLuaDebugLib.patch  003-fix-WXLUA_SHARE_DIR.patch  PKGBUILD
